smileys, clipping path

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 				<p>Use these shape types:</p>
 				<label><input type="checkbox" name="shapeType" value="triangle" checked="checked" />Triangles</label><br/>
 				<label><input type="checkbox" name="shapeType" value="rectangle" />Rectangles</label><br/>
-				<label><input type="checkbox" name="shapeType" value="ellipse" />Ellipses</label>
+				<label><input type="checkbox" name="shapeType" value="ellipse" />Ellipses</label><br/>
+				<label><input type="checkbox" name="shapeType" value="smiley" />Smileys</label>
 			</div>
 			<div>
 				<p>Fill background with:</p>
