--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 			</div>
 			<div>
 				<p>Fill background with:</p>
-				<label><input type="radio" name="fill" value="auto" />an auto-detected color</label><br/>
-				<label><input type="radio" name="fill" value="fixed" checked="checked" />a fixed color: </label>
+				<label><input type="radio" name="fill" value="auto" checked="checked" />an auto-detected color</label><br/>
+				<label><input type="radio" name="fill" value="fixed" />a fixed color: </label>
 				<input type="color" value="#ffffff" name="fill-color" />
 			</div>
 			<div>
