--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		</section>
 
 		<footer>
-			&copy; 2016 <a href="http://ondras.zarovi.cz/">Ondřej Žára</a>
+			&copy; 2016 <a href="http://ondras.zarovi.cz/">Ondřej Žára</a>, <a href="https://github.com/ondras/primitive.js">GitHub repository</a>
 		</footer>
 		
 		<script src="js/app.js"></script>
