--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width" />
 		<link rel="stylesheet" href="css/app.css" />
+		<title>primitive.js &ndash; drawing images with geometric primitives</title>
 	</head>
 
 	<body>
