https link to primitive.lol

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<p><img src="logo.png" alt="Logo" /></p>
 		<h1>primitive.js</h1>
-		<p>This is a JavaScript port of the <a href="http://primitive.lol">http://primitive.lol</a> app, originally created by Michael Fogleman. Its purpose is to re-draw existing images using only primitive geometric shapes.</p>
+		<p>This is a JavaScript port of the <a href="https://primitive.lol">https://primitive.lol</a> app, originally created by Michael Fogleman. Its purpose is to re-draw existing images using only primitive geometric shapes.</p>
 		<p>You can find some additional (technical) information in the <a href="https://github.com/ondras/primitive.js">GitHub repository</a>. This page acts as a small demo where you can experiment with the algorithm.</p>
 		
 		<h2>Try it in your browser!</h2>
