--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				<div class="vector" id="vector"></div>
 				<label><input type="radio" name="type" value="raster" checked="checked" />Raster image: right-click to save</label><br/>
 				<label><input type="radio" name="type" value="vector" />Vector image: copy&amp;paste data from the text area below</label><br/>
-				<textarea class="vector" id="vector-text"></textarea>
+				<textarea class="vector" id="vector-text" spellcheck="false"></textarea>
 			</div>
 		</section>
 
