--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
 		
 		<h2>Try it in your browser!</h2>
 		<form>
-			<h3>Pick an image file from your computer</h3>
-			<input type="file" />
+			<h3>Pick an image file</h3>
+			<ul>
+				<li>From your computer: <input type="file" /></li>
+				<li>From URL (must be <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/CORS_enabled_image">CORS-enabled</a>): <input type="text" name="url" /></li>
+			</ul>
 			<h3>Check or adjust various rendering options</h3>
 			<div>
 				<p>Add <span class="value"></span> geometric shapes
