use correct input type for URL

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<h3>Pick an image file</h3>
 			<ul>
 				<li>From your computer: <input type="file" /></li>
-				<li>From URL (must be <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/CORS_enabled_image">CORS-enabled</a>): <input type="text" name="url" /></li>
+				<li>From URL (must be <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/CORS_enabled_image">CORS-enabled</a>): <input type="url" name="url" /></li>
 			</ul>
 			<h3>Check or adjust various rendering options</h3>
 			<div>
